# clicky

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md
.github/workflows/: release.yml
benchmarks/: Cargo.toml  README.md  stats.py
benchmarks/src/: client-binary.rs  client.rs  lib.rs
clicky-go/: go.mod  go.sum  main.go  run.sh
clicky-ntex/: Cargo.toml
clicky-ntex/src/: error.rs  main.rs
clicky-python/: main.py  pyproject.toml  requirements.txt  run.sh  worker.py
src/: error.rs  lib.rs  main.rs  mmap.rs
src/storage/: file.rs  mod.rs  redis.rs
ui/: README.md  package.json  vite.config.js
ui/src/: main.ts
