[package]
name = "clicky"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-cors = "0.6.1"
actix-http = "3.0.4"
actix-web = { version = "4.0.1", features = ["rustls"] }
anyhow = "1.0.56"
env_logger = "0.9.0"
futures-util = "0.3.21"
humantime = "2.1.0"
log = "0.4.16"
thiserror = "1.0.30"

[workspace]
members = [".", "benchmarks"]

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[features]
default = []
backend-file = []
