[package]
name = "clicky"
version = "0.3.0"
edition = "2021"

[[bin]]
name = "clicky"
path = "src/main.rs"

[dependencies]
actix-cors = "0.6.1"
actix-http = "3.0.4"
actix-web = { version = "4.0.1", features = ["rustls"] }
anyhow = "1.0.56"
env_logger = "0.9.0"
futures-util = "0.3.21"
humantime = "2.1.0"
log = "0.4.16"
thiserror = "1.0.30"
redis = { version = "0.21.5", optional = true }

[workspace]
members = [".", "benchmarks"]

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
strip = true  # Automatically strip symbols from the binary

[features]
default = []
backend-file = []
backend-redis = ["redis"]
